--- a/README.textile
+++ b/README.textile
@@ -12,7 +12,7 @@ Replace USER_ID and GROUP_ID with your host IDs and the set the name of the resu
 
 bc. $ sudo docker build --build-arg USER_ID=<you-user-id-on-host> --build-arg GROUP_ID=<your-group-id-on-host> -t <you-image-name-here> .
 
-h3. example
+h3. Example
 
 bc. $ sudo docker build --build-arg USER_ID=1000 --build-arg GROUP_ID=1000 -t scto-php:7.4 .
 
@@ -30,8 +30,6 @@ h2. Using environment variables in PHP docker container
 If you pass the .env file in the service section in docker-compose.yml it will be passed to the environment of the docker container.
 
 h3. Example
-
-bc. 
 
 .env
 
