--- a/README.textile
+++ b/README.textile
@@ -2,6 +2,7 @@ h1. Apache/PHP docker image with useful enhancements
 
 * based on chialab PHP image ["https://github.com/chialab/docker-php":https://github.com/chialab/docker-php]
 * support for SSL
+* added mariadb-client for mysql and mysqldump binary
 * www-data with home path for certificates
 * user and group of www-data are re-created with host's userID and groupID as workaround to file permission issues on the host (userID and groupID are set via --build-arg parameter)
 * mhsendmail as sendmail for using Mailhog ["https://github.com/mailhog/MailHog":https://github.com/mailhog/MailHog]
